.activites-item dans version mobile : correction coquille

--- a/css/style.css
+++ b/css/style.css
@@ -683,7 +683,7 @@ footer{
         width:100%;
     }
 
-    .activites-item:hover{
+    .activites-item:active{
         box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
     }
 
